--- a/index.html
+++ b/index.html
@@ -37,17 +37,7 @@
       <div class="container">
         <a href="https://nextech.io/home" target="_blank"><img src="img/final_logo4.png" class="img-fluid" ></a>
         <a class="navbar-brand js-scroll-trigger" href="#page-top">The Early Late Show with AI Stephen Colbert</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
-          <i class="fa fa-bars"></i>
         </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="https://www.youtube.com/watch?v=EI3gcbDUNiM">Cyborgasm Guaranteed!</a>
-            </li>
-          </ul>
-        </div>
       </div>
     </nav>
 
@@ -69,7 +59,7 @@
                     <img src="img/colbert.jpg" class="rounded-circle img-fluid" alt="">
                   </div>
                   <div class="button">
-                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
+                    <center><a class="nav-link js-scroll-trigger" href="https://www.youtube.com/watch?v=EI3gcbDUNiM">Cyborgasm Guaranteed!</a></center>
                   </div>
               
               </div>
