--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a href="https://nextech.io/home" target="_blank"><img src="img/final_logo4.png" class="img-fluid" ></a>
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">The Early Late Show with AI Stephen Colbert</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/final_logo4.png" class="img-fluid" >The Early Late Show with AI Stephen Colbert</a>
         </button>
       </div>
     </nav>
