--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -33,12 +33,12 @@
   <body id="page-top">
 
     <!-- Navigation -->
-    
+    <nav class="navbar navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/final_logo4.png" class="img-fluid" >The Early Late Show with AI Stephen Colbert</a>
         </button>
       </div>
-   
+    </nav>
 
     <header class="masthead">
       <div class="container h-100">
