Simpler site until fixes are done

--- a/index.html
+++ b/index.html
@@ -46,8 +46,13 @@
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
               <h1 class="mb-5" align="center"><a href="https://twitter.com/deepcolbert">@DeepColbert<img src="img/twitter.png" height="50"></img></a> is an Artificial Intelligence with the personality of Stephen Colbert.</h1>
-              <p align="center"><a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Check out its tweets!</a></p>
+              <p align="center"><a href="https://twitter.com/deepcolbert" class="btn btn-outline btn-xl js-scroll-trigger">Check out its tweets!</a>
+
+          <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">More about us</a>
+       </p>
+
             </div>
+
           </div>
           <div class="col-lg-5 my-auto">
             <div class="device-container">
@@ -67,6 +72,7 @@
         </div>
       </div>
     </header>
+    <!--
 <section class="download bg-primary text-center" id="download">
       <div class="container">
 <style type="text/css">
@@ -234,7 +240,7 @@
 </style>
 <center>
 <div class="slides col-lg-7 my-auto"> 
-    <ul> <!-- slides -->
+    <ul> 
         <li><center><blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">You&#39;ve all heard the news - The <a href="https://twitter.com/realDonaldTrump?ref_src=twsrc%5Etfw">@realDonaldTrump</a> administration can not be dissolved until Mueller&#39;s investigation is complete. So, for anyone who loves their Uber driver but wishes there wasn&#39;t a madman with nuclear weapons at -- Jimmy, get those balloons out of here! <a href="https://twitter.com/hashtag/ColbertAI?src=hash&amp;ref_src=twsrc%5Etfw">#ColbertAI</a></p>&mdash; ColbertAI.com (@DeepColbert) <a href="https://twitter.com/DeepColbert/status/991448558690693121?ref_src=twsrc%5Etfw">May 1, 2018</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> </center>
             
         </li>
@@ -268,13 +274,10 @@
 
       </div>
    </section>
-
+-->
     <section class="cta">
       <div class="cta-content">
-        <div class="container">
-          <h2><br></h2>
-          <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">More about us</a>
-        </div>
+        
       </div>
       <div class="overlay"></div>
     </section>
@@ -284,6 +287,7 @@
         <h2>Made with 
           <i class="fa fa-heart"></i>
           by <b><font color="#ff0000">Next</font> <font color="#3500fc">Tech</font> <font color="#7f7f7f">Lab</font> <font color="#000000">AP</font></b></h2>
+        <!--
         <ul class="list-inline list-social">
           <li class="list-inline-item social-twitter">
             <a href="#">
@@ -300,7 +304,7 @@
               <i class="fa fa-google-plus"></i>
             </a>
           </li>
-        </ul>
+        </ul>-->
       </div>
     </section>
 
