--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="https://nextech.io/home"><h6><img src="img/final_logo4.png" class="img-fluid" >
-           The Early Late Show with Colbert AI</h6></a>
+           The Early Late Show with DeepColbert</h6></a>
         </button>
       </div>
     </nav>
