--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       <div class="container">
         <h2>Made with 
           <i class="fa fa-heart"></i>
-          by <b><font color="#ff0000">Next</font> <font color="#3500fc">Tech</font> <font color="#7f7f7f">Lab</font> <font color="#000000">AP</font></b><a href="https://twitter.com/nexttechlab_ap"><img src="img/twitter.png" height="60"></a></h2>
+          by AI Researchers at<br><b><font color="#ff0000">Next</font> <font color="#3500fc">Tech</font> <font color="#7f7f7f">Lab</font> <font color="#000000">AP</font></b><a href="https://twitter.com/nexttechlab_ap"><img src="img/twitter.png" height="60"></a></h2>
                            
                            <a href="https://www.facebook.com/NextTechLabAP/"><img src="facebook.svg" height="50"></a>
                            <a href="https://www.instagram.com/nexttechlab_ap/?hl=en"><img src="instagram.png" height="75"></a>
