--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
-              <h1 class="mb-5" align="center"><a href="https://twitter.com/deepcolbert">@DeepColbert<img src="img/twitter.png" height="50"></img></a> is an Artificial Intelligence with the personality of Stephen Colbert.</h1>
+              <h1 class="mb-5" align="center"><a href="https://twitter.com/deepcolbert">@DeepColbert<img src="img/twitter.png" height="50"></img></a>is an Artificial Intelligence with the personality of Stephen Colbert.</h1>
               <p align="center"><a href="https://twitter.com/deepcolbert" class="btn btn-outline btn-xl js-scroll-trigger">Check out its tweets!</a>
 
           <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">More about us</a>
@@ -288,9 +288,10 @@
         <h2>Made with 
           <i class="fa fa-heart"></i>
           by AI Researchers at<br><b><a href="https://nextech.io/home"><font color="#ff0000">Next</font> <font color="#3500fc">Tech</font> <font color="#7f7f7f">Lab</font> <font color="#000000">AP</font></a></b><a href="https://twitter.com/nexttechlab_ap"><img src="img/twitter.png" height="60"></a></h2>
-                           
                            <a href="https://www.facebook.com/NextTechLabAP/"><img src="facebook.svg" height="50"></a>
                            <a href="https://www.instagram.com/nexttechlab_ap/?hl=en"><img src="instagram.png" height="75"></a>
+                           <br><br>
+                           Contact Us: <a href="mailto:aditthya@nextech.io"><font color=black>aditthya [at] nextech [dot] io</font></a>
                         
 
         <!--
